# youtube-notify

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example.yaml  example.env  rollback.py  run_top_plays.sh  setup.cfg  start.py  top_plays.py  tox.ini  youtube_notify.py
.github/workflows/: new-videos.yaml  test.yaml  tests.yaml
storage/ACB/: history.json  history.txt
storage/BasketballCL/: history.json  history.txt
storage/FIBA3x3/: history.json  history.txt
storage/LNBOfficiel/: history.json  history.txt
storage/NBA/: history.json  history.txt
storage/WNBA/: history.json  history.txt
storage/euroleague/: history.json  history.txt
storage/legabasket/: history.json  history.txt
storage/nbagleague/: history.json  history.txt
storage/vtbleague/: history.json  history.txt
testing/: util.py
testing/resources/: NBA_raw.txt
tests/: test_top_plays.py  top_plays_test.py
top_plays.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
