[metadata]
name = youtube_notify
version = 0.2.4
description = Custom subscription for updates on YouTube channels
author = Vyacheslav Kapitonov
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = top_plays
install_requires =
    requests
    yt-dlp==2023.11.16

[options.entry_points]
console_scripts =
    youtube-notify = youtube_notify:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
