[metadata]
name = youtube_notify
version = 0.2.4
description = Custom subscription for updates on YouTube channels
author = Vyacheslav Kapitonov
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = top_plays
install_requires =
    pyyaml
    requests
    yt-dlp==2023.11.16
python_requires = >=3.11

[options.entry_points]
console_scripts =
    youtube-notify = youtube_notify:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
